backlog: JSpecify + NullAway as a build-time nullness gate (owner to-do, agreed)
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012HjZVPe6hrTgyjSc7YkTz8